[project]
name = "mat3ra-esse"
dynamic = ["version"]
description = "Excellent Source of Schemas and Examples."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }
authors = [
    { name = "Exabyte Inc.", email = "info@mat3ra.com" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development",
]
dependencies = [
    "exabyte-json-include>=2023.12.23.post0",
    "jsonschema>=2.6.0",
    # "python-slugify==2.0.1",
    # PyYAML install could be problematic, see https://github.com/yaml/pyyaml/issues/601
    # To avoid "AttributeError: cython_sources", consider "cython<3.0.0", the below might be needed:
    #"PyYAML==5.4.1",
    # "Unidecode==1.1.1",
    # "toml==0.10.2",
    # "importlib-resources==5.2.2",
]

[project.optional-dependencies]
tests = [
    "coverage[toml]>=5.3",
    "parameterized>=0.9.0",
]
all = ["mat3ra-esse[tests]"]

[tool.coverage.run]
source = ['.']
omit = ['env*/*', 'venv*/*', 'tests/*']

# Entrypoint scripts can be defined here, see examples below.
[project.scripts]
# my-script = "my_package.my_module:my_function"


[build-system]
requires = [
    "setuptools>=42",
    "setuptools-scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
git_describe_command = "git describe --tags --long"
# Consider the below to allow for versions like 2024.1.25.post5.dev1'
# https://github.com/pypa/setuptools_scm/issues/342#issuecomment-1233118020
# This won't require a git tag to be present before each publish.
# See https://github.com/Exabyte-io/actions/blob/main/py/publish/action.yml#L47 also.
# local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src/py"]

[tool.black]
line-length = 120
target-version = ['py38']
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
(
    examples\/.*\/.*\.py
  | other\/.*\/.*\.(py|ipynb)
)
'''

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "src/js",
    "src/py/mat3ra/esse/data",
    "tests/js"
]
line-length = 120
target-version = "py38"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
